--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             </div>
           </div>
         </div>
+        <button class="checker">Click</button>
     <script src="app.js"></script>
 </body>
 </html>
