--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
         <div class="outer-grid">
           <div class="outer-square">
             <div class="inner-grid">
-              <div class="inner-square">1</div>
+              <div class="inner-square"></div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square">2</div>
+              <div class="inner-square"></div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square">3</div>
+              <div class="inner-square"></div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square">4</div>
+              <div class="inner-square"></div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square">5</div>
+              <div class="inner-square"></div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square">6</div>
+              <div class="inner-square"></div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square">7</div>
+              <div class="inner-square"></div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square">8</div>
+              <div class="inner-square"></div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square">9</div>
+              <div class="inner-square"></div>
             </div>
           </div>
         </div>
