changed pieces. Not win conditions

--- a/index.html
+++ b/index.html
@@ -14,31 +14,33 @@
         <div class="outer-grid">
           <div class="outer-square">
             <div class="inner-grid">
-              <div class="inner-square"></div>
+              <div class="inner-square one"></div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square"></div>
+              <div class="inner-square two">
+                <div class="piece-on" draggable="true"></div>
+              </div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square"></div>
+              <div class="inner-square three">3</div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square"></div>
+              <div class="inner-square four">4</div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square"></div>
+              <div class="inner-square five">5</div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square"></div>
+              <div class="inner-square six">6</div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square"></div>
+              <div class="inner-square seven">7</div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square"></div>
+              <div class="inner-square eight">8</div>
             </div>
             <div class="inner-grid">
-              <div class="inner-square"></div>
+              <div class="inner-square nine">9</div>
             </div>
           </div>
         </div>
